# matrix-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  config.example.yaml  docker-compose.yml
crates/bot/: Cargo.toml
crates/bot/src/: logging.rs  main.rs  plugins.rs  wasm_plugins.rs
crates/bot/src/tools/: mod.rs
crates/bot/src/tools/ai/: mod.rs
crates/bot/src/tools/diag/: mod.rs
crates/bot/src/tools/echo/: mod.rs
crates/bot/src/tools/mode/: config.example.yaml  mod.rs
crates/plugin-ai/: Cargo.toml
crates/plugin-ai/src/: gemini.rs  lib.rs  mcp.rs  mcp_server.rs  pii.rs
crates/plugin-core/src/: factory.rs  lib.rs
crates/plugin-diagnostics/: Cargo.toml
crates/plugin-diagnostics/src/: lib.rs
crates/plugin-echo/: Cargo.toml
crates/plugin-echo/src/: lib.rs
crates/plugin-gewn/: Cargo.toml
crates/plugin-gewn/src/: lib.rs
crates/plugin-mode/: Cargo.toml
crates/plugin-mode/src/: lib.rs
crates/plugin-phrases/: Cargo.toml
crates/plugin-phrases/src/: lib.rs
crates/plugin-ping/: Cargo.toml
crates/plugin-ping/src/: lib.rs
crates/plugin-relay/: Cargo.toml
crates/plugin-relay/src/: lib.rs  relay_config.rs
crates/plugin-tools-manager/: Cargo.toml
crates/plugin-tools-manager/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs  plugin_trait.rs
examples/wasm-plugins/ping-component/: Cargo.toml
plugins/gewn/: .gitignore
src/: main.rs
src/commands/: mod.rs
src/tools/: mod.rs
src/tools/ai/: mod.rs
src/tools/diag/: config.example.yaml  mod.rs
src/tools/echo/: mod.rs
src/tools/mode/: mod.rs
src/tools/tools/: config.example.yaml
src/tools/tools_mgr/: mod.rs
wit/: plugin.wit
