[package]
name = "matrix-ping-bot"
version = "0.1.0"

edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
futures-util = "0.3"
matrix-sdk = { version = "0.14", features = ["anyhow", "e2e-encryption", "sqlite"] }
mime = "0.3"
rpassword = { version = "7", optional = true }
serde = { version = "1" }
serde_derive = { version = "1" }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[features]
default = ["rpassword"]
