[package]
name = "matrix-ping-bot"
version = "0.1.0"

edition = "2024"

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
matrix-sdk.workspace = true
mime.workspace = true
rpassword = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
wasmtime = { version = "37", features = ["component-model-async"], optional = true }
wasmtime-wasi = { version = "37", optional = true }

plugin-ai = {  path = "../plugin-ai" }
plugin-diagnostics = {  path = "../plugin-diagnostics" }
plugin-echo = {  path = "../plugin-echo" }
plugin-mode = {  path = "../plugin-mode" }
plugin-ping = {  path = "../plugin-ping" }
plugin-tools-manager = {  path = "../plugin-tools-manager" }
plugin-relay = {  path = "../plugin-relay" }
plugin-core = { path = "../plugin-core" }

[features]
default = ["rpassword"]
wasm-plugins = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
