[package]
name = "plugin-gewn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
matrix-sdk.workspace = true
mime.workspace = true
rand.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true

plugin-core = { path = "../plugin-core" }

[lints]
workspace = true
